--- a/index.html
+++ b/index.html
@@ -759,7 +759,7 @@
 
             <div class="timeline-item">
                     <div class="timeline-header">
-                        <div class="timeline-title">Retail Operations Manager - Krispy Kreme</div>
+                        <div class="timeline-title">Retail Manager - Krispy Kreme</div>
                         <div class="timeline-date">Sep 2021 - May 2025</div>
                     </div>
                     <div class="timeline-content">
@@ -793,7 +793,7 @@
                     <div class="timeline-content">
                         <ul>
                             <li>Data Analytics Essentials - Cisco Networking Academy</li>
-                            <li>Python for Data Analysis - DataCamp</li>
+                            <li>Data Analyst in Python - DataCamp</li>
                             <li>Ask Questions to Make Data-Driven Decisions - Coursera</li>
                             <li>Foundations: Data, Data Everywhere - Coursera</li>
                         </ul>
