Add fade-in class to multiple sections

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
 
   <!-- Home Section -->
-  <section id="home" class="section home">
+  <section id="home" class="section home fade-in">
     <h1>Chiamaka Ruth Okakpu</h1>
     <p>Data Entry Specialist & Analyst</p>
     <div class="btn-group">
@@ -52,7 +52,7 @@
   </section>
 
   <!-- About Section -->
-  <section id="about" class="section about">
+  <section id="about" class="section about fade-in">
     <h2>About Me</h2>
     <p> I am a data analyst and product analyst working with startups and growing businesses to turn messy data into decisions that actually move the needle.
 Before data, I spent years as a retail manager responsible for sales performance, inventory planning, and customer purchasing behavior. That experience matters more than most analytics certificates. I have lived inside operational problems, revenue pressure, and customer churn. Data wasn’t abstract to me. It was survival.
@@ -62,7 +62,7 @@ If you are building something and your data feels noisy, underused, or ignored, 
   </section>
 
   <!-- Skills Section -->
-  <section id="skills" class="section skills">
+  <section id="skills" class="section skills fade-in">
     <h2>Product & Growth Analytics</h2>
     <ul class="skill-list">
       <li>User acquisition, retention, and engagement analysis</li>
@@ -91,7 +91,7 @@ If you are building something and your data feels noisy, underused, or ignored, 
   </section>
     
   <!-- Tools Section -->
-  <section id="tools" class="section tools">
+  <section id="tools" class="section tools fade-in">
     <ul class="tool-list">
       <li>Python (Pandas, Numpy, scikit-learn)</li>
       <li>SQL</li>
@@ -102,7 +102,7 @@ If you are building something and your data feels noisy, underused, or ignored, 
   </section>
     
   <!-- Experience Section -->
-  <section id="experience" class="section experience">
+  <section id="experience" class="section experience fade-in">
     <h2>Professional Experience</h2>
     <div class="job">
       <h3>Data Analyst</h3>
@@ -139,7 +139,7 @@ If you are building something and your data feels noisy, underused, or ignored, 
   </section>
 
   <!-- Projects Section -->
-  <section id="projects" class="section projects">
+  <section id="projects" class="section projects fade-in">
     <h2>Featured Projects</h2>
 
     <div class="project">
@@ -161,17 +161,17 @@ If you are building something and your data feels noisy, underused, or ignored, 
   </section>
 
   <!-- Certifications Section -->
-  <section id="certifications" class="section certs">
+  <section id="certifications" class="section certs fade-in">
     <h2>Certifications & Training</h2>
     <ul>
-      <li>Certification 1</li>
+      <li>Data Analytics Essentials | </li>
       <li>Certification 2</li>
       <!-- Add more certifications -->
     </ul>
   </section>
 
   <!-- Contact Section -->
-  <section id="contact" class="section contact">
+  <section id="contact" class="section contact fade-in">
     <h2>Get In Touch</h2>
     <p>Send me a message:</p>
     <form>
