Enhance projects and certifications sections in index.html
Added new project sections for Movie Lens Feature Engineering and HNG Ride Analysis, including descriptions and report links. Updated the certifications section to use a grid layout with individual certificate cards.

--- a/index.html
+++ b/index.html
@@ -152,22 +152,61 @@ If you are building something and your data feels noisy, underused, or ignored, 
       <h3>NIGERIAN BANKING SEO ANALYSIS </h3>
       <p>Built a Power BI dashboard that transforms raw SEO metrics into strategic for product and growth teams. By aligning search visibility, user intent signals and ranking trends, the analysis helps identify high-impact content opportunities and performance gaps within the Nigerian banking landscape.</p>
       <a href="#" class="https://app.powerbi.com/view?r=eyJrIjoiZTQ3YzgwNTgtNjgxNi00NTEyLWEzMmUtMGRmNzk0NjVhMDg5IiwidCI6IjM5MTM5MTFjLWQ3NjUtNDg2Ny04Zjk5LTI3MzRlMWIyMDhlZSJ9">View Dashboard</a>
+      <a href="#" class="https://drive.google.com/drive/folders/1YtYYjNDKdlqdZeqNmRNwbJJOxMy4xTYm?usp=sharing">View Report</a>
     </div>
      <div class="project">
       <h3>HOTEL PERFORMANCE ANALYSIS </h3>
       <p>Generated actionable insights from hotel performance data to understand what truly drives revenue and profit. The analysis exposed how pricing, customer segments, and seasonality influence outcomes, helping stakeholders focus on margin optimization rather than volume growth alone. </p>
       <a href="#" class="https://app.powerbi.com/view?r=eyJrIjoiMzRjODc2YjQtMjIyNC00NTIxLWE1ODUtNzNjYzA5NDE2YmQxIiwidCI6IjM5MTM5MTFjLWQ3NjUtNDg2Ny04Zjk5LTI3MzRlMWIyMDhlZSJ9">View Dashboard</a>
     </div> 
+     <div class="project">
+      <h3>MOVIE LENS FEATURE ENGINEERING </h3>
+      <p>Generated actionable insights from hotel performance data to understand what truly drives revenue and profit. The analysis exposed how pricing, customer segments, and seasonality influence outcomes, helping stakeholders focus on margin optimization rather than volume growth alone. </p>
+      <a href="#" class="https://drive.google.com/drive/folders/1vuobUwQS0zh8vyZeWspciSnH9WbYsHbM?usp=sharing">View Report</a>
+    </div> 
+     <div class="project">
+      <h3>HNG RIDE ANALYSIS </h3>
+       <p>Analyzed HNG Ride’s operational data from June 2021 to December 2024 to understand ride demand patterns, revenue performance, driver efficiency, and customer behavior. The findings surface actionable insights that inform operational optimization, driver management, and strategic growth decisions.</p>
+      <a href="#" class="https://docs.google.com/document/d/1H5X8CRRZDp6XL9E1uU43jiaf1jidHXo6arvsD7sE1P8/edit?usp=sharing">View Report</a>
+    </div> 
   </section>
 
   <!-- Certifications Section -->
-  <section id="certifications" class="section certs fade-in">
-    <h2>Certifications & Training</h2>
-    <ul>
-      <li>Data Analytics Essentials | </li>
-      <li>Certification 2</li>
-      <!-- Add more certifications -->
-    </ul>
+ <section id="certifications" class="section certs fade-in">
+  <h2>Certifications & Training</h2>
+
+  <div class="cert-grid">
+
+    <a href="certificates/Data_Analytics_Essentials_Badge.pdf"
+       target="_blank"
+       class="cert-card">
+      <i class="fas fa-certificate"></i>
+      <h3>Data Analytics Certification</h3>
+      <p>Cisco Networking Academy</p>
+      <p>View Certificate</p>
+    </a>
+
+    <a href="certificates/Data Analyst In Python.pdf"
+       target="_blank"
+       class="cert-card">
+      <i class="fas fa-certificate"></i>
+      <h3>Data Analyst In Python</h3>
+      <p>DataCamp</p>
+      <p>View Certificate</p>
+    </a>
+
+    <a href="certificates/Coursera_Foundations_Data.pdf"
+       target="_blank"
+       class="cert-card">
+      <i class="fas fa-certificate"></i>
+      <h3>Foundations.Data</h3>
+      <p>Coursera</p>
+      <p>View Certificate</p>
+    </a>
+
+  </div>
+</section>
+
   </section>
 
   <!-- Contact Section -->
