Revise job details and project descriptions in index.html
Updated job descriptions and project details for clarity and relevance.

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@ If you are building something and your data feels noisy, underused, or ignored, 
     <h2>Professional Experience</h2>
     <div class="job">
       <h3>Data Analyst</h3>
-      <p><strong>Freelance (Remote)</strong> — January 2026 – Present</p>
+      <p><strong>Freelance (Remote)</strong> | January 2026 – Present</p>
       <ul>
         <li>Analyzed user acquisition channels, traffic sources, and engagement sessions to understand growth drivers.</li>
         <li>Evaluated landing page performance to identify conversion bottlenecks.</li>
@@ -121,7 +121,7 @@ If you are building something and your data feels noisy, underused, or ignored, 
         <li>Strengthened applied understanding of machine learning in business contexts.</li>
       </ul>
       <h3>Data Analysis Intern</h3>
-      <p><strong>HNG Tech (Remote)</strong> — January 2025 – March 2025</p>
+      <p><strong>HNG Tech (Remote)</strong> | January 2025 – March 2025</p>
       <ul>
         <li>Worked on multiple real-world analytics projects across different domains.</li>
         <li>Performed data cleaning, exploratory analysis, and visualization for stakeholder use.</li>
@@ -161,7 +161,7 @@ If you are building something and your data feels noisy, underused, or ignored, 
     </div> 
      <div class="project">
       <h3>MOVIE LENS FEATURE ENGINEERING </h3>
-      <p>Generated actionable insights from hotel performance data to understand what truly drives revenue and profit. The analysis exposed how pricing, customer segments, and seasonality influence outcomes, helping stakeholders focus on margin optimization rather than volume growth alone. </p>
+      <p> Analyzed the MovieLens dataset to extract meaningful user and content features that support smarter recommendation system design. Through data cleaning, exploratory analysis, and the creation of eight engineered features, the project identified key behavioral and genre-based patterns across 100,836 ratings from 610 users. The resulting insights highlight how user preferences and rating dynamics can be leveraged to improve personalization and recommendation relevance.</p>
       <a href="#" class="https://drive.google.com/drive/folders/1vuobUwQS0zh8vyZeWspciSnH9WbYsHbM?usp=sharing">View Report</a>
     </div> 
      <div class="project">
