--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 
   <!-- Custom CSS -->
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
@@ -222,7 +222,7 @@ If you are building something and your data feels noisy, underused, or ignored, 
   </section>
 
   <!-- JavaScript -->
-  <script src="js/script.js"></script>
+  <script src="script.js"></script>
 
 </body>
 </html>
