--- a/index.html
+++ b/index.html
@@ -373,7 +373,7 @@
   
 
   <!-- JavaScript -->
-  <script src="script.js"></script>
+  <--script src="script.js"--><--/script-->
 
 </body>
 </html>
