Update image sources and links in index.html

--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
           <h3>UseMenuCard — Digital Menu Platform</h3>
           <p>Contributed in shaping a data-driven product launch strategy for UseMenuCard, a digital menu platform during my internship at HNG. This project involved data processing, menu management, and ensuring data accuracy for restaurant partners.</p>
         <div class="project-image">
-          <img src="certificates/usemenucard.jpg" alt="UseMenuCard Project" >
+          <img src="image/usemenucard.jpg" alt="UseMenuCard Project" >
         </div>
         <br>
           <div class="project-links">
@@ -298,7 +298,7 @@
           </div>
           <br>
           <div class="project-links">
-            <a href="https://docs.google.com/document/d/1H5X8CRRZDp6XL9E1uU43jiaf1jidHXo6arvsD7sE1P8/edit?usp=sharing" target="_blank" class="project-btn">
+            <a href="https://drive.google.com/file/d/1drHVPTOSn0zPohadlNeNyVNXZtmxyyvx/view?usp=drive_link" target="_blank" class="project-btn">
               <i class="fas fa-file-alt"></i> View Report
             </a>
           </div>
@@ -312,24 +312,31 @@
   <section id="certifications" class="section certs fade-in">
     <h2 class="section-title">Certifications & Training</h2>
     <div class="cert-grid">
-      <a href="certificates/Data_Analytics_Essentials_Badge.pdf" target="_blank" class="cert-card">
+      <a href=https://drive.google.com/file/d/1zNNwPzB54nVs4qnefXbyO7dGdRAQtKlS/view?usp=drive_link" target="_blank" class="cert-card">
         <i class="fas fa-certificate"></i>
         <h3>Data Analytics Certification</h3>
         <p>Cisco Networking Academy</p>
         <span class="cert-view">View Certificate →</span>
       </a>
 
-      <a href="certificates/Data Analyst In Python.pdf" target="_blank" class="cert-card">
+      <a href="https://drive.google.com/file/d/1glj3ORMMkOvAmI3AWFeRlYt2iYQsPXXE/view?usp=drive_link" target="_blank" class="cert-card">
         <i class="fas fa-certificate"></i>
         <h3>Data Analyst In Python</h3>
         <p>DataCamp</p>
         <span class="cert-view">View Certificate →</span>
       </a>
 
-      <a href="certificates/Coursera_Foundations_Data.pdf" target="_blank" class="cert-card">
+      <a href="https://drive.google.com/file/d/1aSLq2qirHGcE0N6Ax2GmxO6CmXlvgU7N/view?usp=drive_link" target="_blank" class="cert-card">
         <i class="fas fa-certificate"></i>
         <h3>Foundations.Data</h3>
         <p>Coursera</p>
+        <span class="cert-view">View Certificate →</span>
+      </a>
+
+      <a href="https://drive.google.com/file/d/124yw5qPUY0XK6e1sF4qJ4q-ovZumXOPu/view?usp=drive_link" target="_blank" class="cert-card">
+        <i class="fas fa-certificate"></i>
+        <h3>Data Analyst Internship</h3>
+        <p>HNG TECH</p>
         <span class="cert-view">View Certificate →</span>
       </a>
     </div>
@@ -351,10 +358,10 @@
     <a href="https://linkedin.com/in/yourprofile" target="_blank" aria-label="LinkedIn">
       <i class="fab fa-linkedin"></i>
     </a>
-    <a href="https://github.com/yourprofile" target="_blank" aria-label="GitHub">
-      <i class="fab fa-github"></i>
+    <a href="https://medium.com/@chizobaokakpu65" target="_blank" aria-label="Medium">
+      <i class="fab fa-medium"></i>
     </a>
-    <a href="https://twitter.com/yourprofile" target="_blank" aria-label="Twitter">
+    <a href="https://twitter.com/triple_chee" target="_blank" aria-label="Twitter">
       <i class="fab fa-twitter"></i>
     </a>
     <a href="mailto:chizobaokakpu65@gmail.com" aria-label="Email">
