Update image source for UseMenuCard project

--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
           <h3>UseMenuCard — Digital Menu Platform</h3>
           <p>Contributed in shaping a data-driven product launch strategy for UseMenuCard, a digital menu platform during my internship at HNG. This project involved data processing, menu management, and ensuring data accuracy for restaurant partners.</p>
         <div class="project-image">
-          <img src="image/usemenucard.jpg" alt="UseMenuCard Project" >
+          <img src="certificates/usemenucard.jpg" alt="UseMenuCard Project" >
         </div>
         <br>
           <div class="project-links">
