Update image file extensions from .jpg to .jpeg

--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
           <h3>Nigerian Banking SEO Analysis</h3>
           <p>Built a Power BI dashboard that transforms raw SEO metrics into strategic insights for product and growth teams. By aligning search visibility, user intent signals and ranking trends, the analysis helps identify high-impact content opportunities and performance gaps within the Nigerian banking landscape.</p>
           <div class="project-image">
-            <img src="certificates/banking-seo.jpg" alt="Nigerian Banking SEO Analysis">
+            <img src="certificates/banking-seo.jpeg" alt="Nigerian Banking SEO Analysis">
           </div>
           <br>
           <div class="project-links">
@@ -260,7 +260,7 @@
           <h3>Hotel Performance Analysis</h3>
           <p>Generated actionable insights from hotel performance data to understand what truly drives revenue and profit. The analysis exposed how pricing, customer segments, and seasonality influence outcomes, helping stakeholders focus on margin optimization rather than volume growth alone.</p>
           <div class="project-image">
-            <img src="certificates/hotel-analysis.jpg" alt="Hotel Performance Analysis">
+            <img src="certificates/hotel-analysis.jpeg" alt="Hotel Performance Analysis">
           </div>
           <br>
           <div class="project-links">
@@ -277,7 +277,7 @@
           <h3>MovieLens Feature Engineering</h3>
           <p>Analyzed the MovieLens dataset to extract meaningful user and content features that support smarter recommendation system design. Through data cleaning, exploratory analysis, and the creation of eight engineered features, the project identified key behavioral and genre-based patterns across 100,836 ratings from 610 users.</p>
           <div class="project-image">
-            <img src="certificates/movielens.jpg" alt="MovieLens Feature Engineering">
+            <img src="certificates/movielens.jpeg" alt="MovieLens Feature Engineering">
           </div>
           <br>
           <div class="project-links">
@@ -294,7 +294,7 @@
           <h3>HNG Ride Analysis</h3>
           <p>Analyzed HNG Ride's operational data from June 2021 to December 2024 to understand ride demand patterns, revenue performance, driver efficiency, and customer behavior. The findings surface actionable insights that inform operational optimization, driver management, and strategic growth decisions.</p>
           <div class="project-image">
-            <img src="certificates/hng-ride.jpg" alt="HNG Ride Analysis">
+            <img src="certificates/hng-ride.jpeg" alt="HNG Ride Analysis">
           </div>
           <br>
           <div class="project-links">
