Update image and LinkedIn profile link

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     <h2>About Me</h2>
     <div class="about-content">
       <div class="about-image">
-        <img src="meni.jpg" alt="Chiamaka Ruth Okakpu">
+        <img src="me.jpg" alt="Chiamaka Ruth Okakpu">
       </div>
       <div class="about-text">
         <p>I am a data analyst and product analyst working with startups and growing businesses to turn messy data into decisions that actually move the needle. Before data, I spent years as a retail manager responsible for sales performance, inventory planning, and customer purchasing behavior. That experience matters more than most analytics certificates. I have lived inside operational problems, revenue pressure, and customer churn. Data wasn't abstract to me. It was survival.</p>
@@ -355,7 +355,7 @@
     <p class="contact-note">Alternatively, email me directly at <a href="mailto:chizobaokakpu65@gmail.com">chizobaokakpu65@gmail.com</a></p>
 
   <div class="social-links">
-    <a href="https://linkedin.com/in/yourprofile" target="_blank" aria-label="LinkedIn">
+    <a href="https://linkedin.com/in/chiamaka-okakpu-191177216" target="_blank" aria-label="LinkedIn">
       <i class="fab fa-linkedin"></i>
     </a>
     <a href="https://medium.com/@chizobaokakpu65" target="_blank" aria-label="Medium">
